--- a/demos/simple/appFiles/index.html
+++ b/demos/simple/appFiles/index.html
@@ -36,6 +36,6 @@ require(['jquery', 'j2p2j'], function() {
    });
 });
 </script>
-Hello! <button id='increment'>1</button> <input type='text' class='n' id='anum' value="20"> <input type='text' class='n' id='bnum' value="7">
+HelloThere!! <button id='increment'>1</button> <input type='text' class='n' id='anum' value="20"> <input type='text' class='n' id='bnum' value="7">
 </body>
 </html>
