--- a/demos/m21/appFiles/index.html
+++ b/demos/m21/appFiles/index.html
@@ -1,21 +1,9 @@
-<html>
 <!DOCTYPE HTML>
 <html>
 <head>
     <meta charset="utf-8">
-    <title>J2P2J Application</title>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="/static/components/require/require.js" data-main='/static/components/j2p2j' type="text/javascript" charset="utf-8"></script>
-    <script>
-      require.config({
-          baseUrl: '/static/components/',
-          paths: {
-            music21 : 'http://web.mit.edu/music21/music21j/src/music21',
-            jquery : '/static/components/jquery/jquery-2.1.1.min',
-          },
-      });
-    </script>
+    <title>Music21/music21j Web Application</title>
+    {% raw j2p2jHead %}
 </head>
 <body>
 <noscript>
@@ -26,6 +14,7 @@
 </noscript>
 <!--  User Code -->
 <script>
+require.config({paths: {music21: 'http://web.mit.edu/music21/music21j/src/music21'}});
 require(['jquery', 'j2p2j', 'music21'], function() {
     j2p2j.connect(); 
 
@@ -37,10 +26,11 @@ require(['jquery', 'j2p2j', 'music21'], function() {
             notes.push(n.nameWithOctave);
         }
         var notesStr = notes.join(',');
-        j2p2j.send('streamAnalyze', function (data) { 
-                s.keySignature = new music21.key.KeySignature(data);
-                s.replaceCanvas();
-            }, [notesStr]);
+        var callback = function (data) { 
+            s.keySignature = new music21.key.KeySignature(data);
+            s.replaceCanvas();
+        };
+        j2p2j.send('streamAnalyze', {callback: callback, args: [notesStr]});
     };
     
     
@@ -57,9 +47,9 @@ require(['jquery', 'j2p2j', 'music21'], function() {
     }
     $inc = $("#getMeasure");
     $inc.on('click', function() { 
-            var args = [parseInt($("#mnum").val()), 
-                        parseInt($("#pnum").val())];
-            j2p2j.send('getMeasure', bachMeasure,  args ); 
+            var args = {m: parseInt($("#mnum").val()), 
+                        p: parseInt($("#pnum").val())};
+            j2p2j.send('getMeasure', args, {callback: bachMeasure}); 
         } );
 });
 </script>
