--- a/demos/by_value/appFiles/index.html
+++ b/demos/by_value/appFiles/index.html
@@ -12,8 +12,10 @@ require(['jquery', 'j2p2j'], function() {
 });
 </script>
 <input type="number" id="toIncrement" value="0">
+<div id="incrementButtons">
 <button id='one'>1</button>
 <button id='ten'>10</button>
 <button id='twenty'>20</button>
+</div>
 </body>
 </html>
