--- a/demos/add_delete_element/appFiles/index.html
+++ b/demos/add_delete_element/appFiles/index.html
@@ -9,12 +9,16 @@
 <script>
 require(['jquery', 'j2p2j'], function() {
   //idea is that this all you need
-   j2p2j.connect();
+   //j2p2j.connect();
+   j2p2jInstance = new j2p2j();
+   //j2p2j.connect();
 });
 </script>
+Total: <span id="total"></span>
 <div id="boxes">
 </div>
 <button id='add_new_box'>Add New Box</button>
 <button id='delete_last_box'>Delete Last Box</button>
+<button id='add_inputs'>Add Inputs</button>
 </body>
 </html>
