--- a/demos/async/appFiles/index.html
+++ b/demos/async/appFiles/index.html
@@ -12,7 +12,7 @@ require(['jquery', 'j2p2j'], function() {
    j2p2j.connect();
 });
 </script>
-<div id="toEdit">0</div>
+<div id="toEdit">Hi</div>
 <button id='pushServer'>Push Server</button>
 
 </body>
