--- a/demos/add_delete_element/appFiles/index.html
+++ b/demos/add_delete_element/appFiles/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <script>
-        require(['jquery', 'j2p2j'], function() {
+        require(['jquery', 'j2p2j'], function($, j2p2j) {
             j2p2j.connect();
         });
         </script>
