--- a/demos/get_increment/appFiles/index.html
+++ b/demos/get_increment/appFiles/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <script>
-require(['jquery', 'j2p2j'], function() {
+require(['jquery', 'j2p2j'], function($, j2p2j) {
   //idea is that this all you need
    j2p2j.connect();
 });
