--- a/old/simple/appFiles/index.html
+++ b/old/simple/appFiles/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <script>
-require(['jquery', 'j2p2j'], function() {
+require(['jquery', 'j2p2j'], function($, j2p2j) {
    j2p2j.connect(); 
    $inc = $("#increment");
    $inc.on('click', function() { j2p2j.send('increment', function(i) { $inc.html(i) } ) } );
